--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "url": "https://github.com/keleko34/konnektmp/issues"
   },
   "devDependencies": {
-    "K_Tasks": "^0.5.4"
+    "K_Tasks": "^0.5.5"
   },
   "scripts": {
     "installer": "npm run installGulp && npm run installBower && npm i && bower i",
@@ -44,5 +44,7 @@
     }
   ],
   "directories": {},
-  "dependencies": {}
+  "dependencies": {
+    "KB": "^0.7.3"
+  }
 }
