--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "url": "https://github.com/keleko34/konnektmp/issues"
   },
   "devDependencies": {
-    "K_Tasks": "^0.8.1"
+    "K_Tasks": "^0.8.1",
+    "konnektdt": "^0.7.4"
   },
   "scripts": {
     "installer": "npm run installGulp && npm run installBower && npm i && bower i",
